--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Le Roux Bodenstein",
   "license": "MIT",
   "dependencies": {
+    "fs-extra": "^6.0.1",
     "puppeteer": "^1.4.0"
   }
 }
